# python-trading-robot

./: main.py  model.ipynb  prediction.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alpaca_api_doc/: alpaca_trade_api.html  index.html  search.js
alpaca_api_doc/alpaca_trade_api/: __main__.html  common.html  entity.html  entity_v2.html  rest.html  rest_async.html  stream.html
config/: config.ini  write_config.py
pyrobot/: broker_alpaca.py  broker_base.py  broker_td.py  portfolio.py  robot.py  trades.py
samples/: trading_robot.py
