[tool.poetry]
name = "python-trading-robot"
version = "0.1.0"
description = "GP2 trading robot"
authors = ["Patrick Payeur <payeurp@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
alpaca-trade-api = "^2.0.0"
td-ameritrade-python-api = "^0.3.5"
pdoc = "^12.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
